--- a/src/components/productList/productList.css
+++ b/src/components/productList/productList.css
@@ -28,3 +28,19 @@
     justify-content: space-between;
 
 }
+
+@media screen and (max-width:480px) {
+
+    .pl {
+        padding: 10px;
+
+    }
+
+    .pl-texts {
+        width: 100%;
+    }
+
+    .pl-desc {
+        margin: 20px 0px;
+    }
+}
