--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -35,3 +35,11 @@
 .p:hover .p-img {
     transform: translateY(-50%);
 }
+
+@media screen and (max-width:480px) {
+
+    .p {
+        width: 40%;
+        height: 17vh;
+    }
+}
